[package]
name = "zffmount"
version = "1.0.0-beta.3"
edition = "2021"
rust-version = "1.58.1"
license = "MIT OR Apache-2.0"
description = "A command line utility to mount a zff container using FUSE."
homepage = "https://github.com/ph0llux/zff"
repository = "https://github.com/ph0llux/zff"
keywords = ["forensics", "security", "file-format", "file"]
categories = ["command-line-utilities"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.10", features = [ "derive" ] }
fuser = "0.11.0"
libc = "0.2.102"
zff = { version="2.0.0-beta.2" }
nix = "0.23"
walkdir = "2.3.2"
time = { version = "0.3.4", features = [ "formatting" ] }
signal-hook = "0.3.13"
#logging
log = "0.4.6"
env_logger = "0.9.0"
#serialize
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
toml = "0.5.8"