[package]
name = "zffmount"
version = "2.0.0-beta.1"
edition = "2021"
rust-version = "1.67.1"
license = "MIT OR Apache-2.0"
description = "A command line utility to mount a zff container using FUSE."
homepage = "https://zff.dev"
repository = "https://github.com/zff-team/zffmount"
keywords = ["forensics", "security", "file-format", "file"]
categories = ["command-line-utilities"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = [ "derive" ] }
fuser = { version = "0.16", default-features = false }
libc = "0.2.177"
zff = { version = "3.0.0-rc.4", features = [ "log" ] }
nix = { version = "0.30.1", features = [ "user" ] }
walkdir = "2.3.2"
time = { version = "0.3.4", features = [ "formatting" ] }
signal-hook = "0.3.13"
#logging
log = "0.4"
env_logger = "0.11"
#serialize
serde = { version = "1.0.228", features = ["derive"] }
hex = "0.4.3"
toml = "0.9.8"
dialoguer = "0.12"
redb = "3.1.0"

[profile.release]
lto = true				# enables link time optimization
panic = 'unwind'		# unwinds the stack if panic
debug = false			# I won't see any debug options in release mode.
opt-level = 2  			# optimized for performance.
codegen-units = 1		# Set to 1 to allow for maximum size reduction optimizations - at the expense of the compile time.
